--- a/index.html
+++ b/index.html
@@ -8,13 +8,27 @@
   </head>
   <body>
     <div class="container">
-      <div class="circle"></div>
-      <div class="circle"></div>
+      <div class="circle">
+        <div class="circle-bg">
+          <img src="n1bg.png" alt="" />
+        </div>
+      </div>
+      <div class="circle">
+        <div class="circle2-bg">
+          <img src="n1bg2.png" alt="" />
+        </div>
+      </div>
+      <div class="circle">
+        <div class="circle3-bg">
+          <img src="n2bg.png" alt="" />
+        </div>
+      </div>
 
       <div class="clock">
         <div class="clock-bg">
           <img src="Clock.png" alt="" />
         </div>
+
         <div class="hour">
           <span class="hr" id="hr"></span>
         </div>
