--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
     <div class="container">
       <div class="circle">
         <div class="circle-bg">
-          <img src="n1bg.png" alt="" />
+          <img src="sun.png" alt="" />
         </div>
       </div>
       <div class="circle">
         <div class="circle2-bg">
-          <img src="n1bg2.png" alt="" />
+          <img src="moon.png" alt="" />
         </div>
       </div>
       <div class="circle">
         <div class="circle3-bg">
-          <img src="n2bg.png" alt="" />
+          <img src="earth.png" alt="" />
         </div>
       </div>
 
